# 86Box-optimizations

./: .gitignore  CMakeLists.txt  CODE_CITATIONS.md  CONTRIBUTING.md  CURRENT_STATUS.md  Code Citations.md  MMX_on_ARM64_Optimization_Prompt_Version11.md  MMX_on_ARM64_Optimization_Prompt_Version11.md.backup  PROJECT_CHANGELOG.md  README.md  SESSION_SUMMARY.md  buildinstructions.md  mmx_neon_micro.json  optimizationplan.md  optimizationreport.md
.github/workflows/: cmake_macos.yml
benchmarks/: CMakeLists.txt  bench_common.h  bench_mmx_ops.h  bench_mocks.h  dynarec_micro  dynarec_micro.c  dynarec_sanity.c  dynarec_test.c  mmx_neon_micro  mmx_neon_micro.c
debian/: changelog
old_docs/: arm64_tactical_implementation_guide.md  implementation_plan.md  voodoo_arm64_port_plan.md
porting_docs/: ARM64_COMMON_PITFALLS.md  PERFORMANCE_OPTIMIZATION.md  README.md  VOODOO_ARM64_PORT_GUIDE.md  WORKED_EXAMPLE_PMULLW.md  port_changelog.md  port_tasks.md
src/: 86box.c  CMakeLists.txt  gdbstub.c
src/codegen_new/: codegen.c  codegen.h  codegen_backend.h  codegen_backend_arm64.c  codegen_backend_arm64_defs.h  codegen_backend_arm64_ops.c  codegen_backend_arm64_ops.h  codegen_backend_arm64_uops.c  codegen_backend_x86-64.c  codegen_block.c  codegen_ir_defs.h  codegen_ops.c  codegen_ops.h  codegen_ops_3dnow.c  codegen_ops_mmx_arith.c  codegen_ops_mmx_cmp.c  codegen_ops_mmx_loadstore.c  codegen_ops_mmx_logic.c  codegen_ops_mmx_pack.c  codegen_ops_mmx_pack.h  codegen_ops_mmx_shift.c  codegen_reg.c  codegen_reg.h
src/cpu/: 386_dynarec.c  cpu.c  cpu.h  x86_ops.h  x86_ops_i686.h  x86_ops_mmx.c  x87.c  x87_ops.h  x87_ops_loadstore.h  x87_ops_misc.h
src/include/86box/: vid_voodoo_codegen_arm64.h  vid_voodoo_render.h
src/qt/: CMakeLists.txt
src/video/: vid_voodoo_render.c
tools/: parse_mmx_neon_log.py  run_perf_profiling.sh
